fix(logic): `swap(x,y)`, add time to `Waypoint`, use `time` instead of `chrono` as `gpx` requires us to do so

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = { version = "0.4.38", default-features = false }
 fit-rust = "0.1.8"
 geo-types = "0.7.13"
 gpx = "0.10.0"
+time = { version = "0.3.36", default-features = false }
