--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5.8", features = ["derive"] }
 fit-rust = "0.1.8"
 geo-types = "0.7.13"
 gpx = "0.10.0"
