--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fit2gpx"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2021"
 
 authors = ["Jeromos Kovács <iitsnotme214@proton.me>"]
@@ -14,7 +14,7 @@ license = "MIT"
 
 [dependencies]
 clap = { version = "4.5.8", features = ["derive"] }
-fit-rust = "0.1.8"
+fit_file = "0.6.0"
 geo-types = "0.7.13"
 gpx = "0.10.0"
 time = { version = "0.3.36", default-features = false }
