--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fit2gpx"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 
 authors = ["Jeromos Kovács <iitsnotme214@proton.me>"]
@@ -14,6 +14,7 @@ license = "MIT"
 
 [dependencies]
 clap = { version = "4.5.8", features = ["derive"] }
+coordinate-altitude = "0.1.0"
 fit_file = "0.6.0"
 geo-types = "0.7.13"
 gpx = "0.10.0"
