--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ license = "MIT"
 
 [dependencies]
 clap = { version = "4.5.8", features = ["derive"] }
-coordinate-altitude = "0.1.0"
 fit_file = "0.6.0"
 geo-types = "0.7.13"
 gpx = "0.10.0"
+srtm = { version = "0.1.1", path = "../srtm" }
 time = { version = "0.3.36", default-features = false }
