--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,8 @@ fit_file = "0.6.0"
 geo-types = "0.7.13"
 gpx = "0.10.0"
 rayon = "1.10.0"
-srtm = { git = "https://github.com/jeromeschmied/srtm", version = "0.2.1" }
+srtm = "0.2.1"
 time = { version = "0.3.36", default-features = false }
+
+[patch.crates-io]
+srtm = { git = "https://github.com/jeromeschmied/srtm" }
