--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,12 @@ fit_file = "0.6.0"
 geo-types = "0.7.13"
 gpx = "0.10.0"
 rayon = "1.10.0"
-srtm = "0.2.1"
+srtm_reader = { version = "0.3.0", optional = true }
 time = { version = "0.3.36", default-features = false }
 
 [patch.crates-io]
-srtm = { git = "https://github.com/jeromeschmied/srtm" }
+srtm_reader = { git = "https://github.com/jeromeschmied/srtm_reader" }
+
+[features]
+default = ["elevation"]
+elevation = ["dep:srtm_reader"]
