--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,8 +20,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: swatinem/rust-cache@v2
       
-      - if: matrix.os == "ubuntu-latest"
-        name: Check typos
+      - name: Check typos
         uses: crate-ci/typos@v1.29.4
 
       - name: Build in release mode
