--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: swatinem/rust-cache@v2
       
       - name: Check typos
+        if: matrix.os == "ubuntu-latest"
         uses: crate-ci/typos@v1.29.4
 
       - name: Build in release mode
