--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.5.26", features = ["derive"] }
+clap = { version = "4.5.26", features = ["derive", "env"] }
 fit_file = "0.6.0"
 geo-types = "0.7.14"
 gpx = "0.10.0"
