--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,11 @@ fit_file = "0.6.0"
 geo-types = "0.7.14"
 gpx = "0.10.0"
 rayon = "1.10.0"
-srtm_reader = { version = "0.3.1", optional = true }
+srtm_reader = { version = "0.4.0", optional = true }
 time = { version = "0.3.37", default-features = false }
 
 [patch.crates-io]
-srtm_reader = { git = "https://github.com/jeromeschmied/srtm_reader", branch = "many"}
+srtm_reader = { git = "https://github.com/jeromeschmied/srtm_reader" }
 
 [features]
 default = ["elevation"]
