--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,5 +39,7 @@ jobs:
       - name: Upload executable
         uses: actions/upload-artifact@v4
         with:
-          name: fit2gpx_${{ matrix.os }}
-          path: target/release/fit2gpx*
+          name: fit2gpx_${{ runner.os }}_${{ runner.arch }}
+          path: |
+              target/release/fit2gpx
+              target/release/fit2gpx.exe
