--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,10 +20,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: swatinem/rust-cache@v2
       
-      - name: Check typos
-        if: matrix.os == 'ubuntu-latest'
-        uses: crate-ci/typos@v1.29.4
-
       - name: Build in release mode
         run: cargo build --release --verbose
 
@@ -39,5 +35,7 @@ jobs:
       - name: Upload executable
         uses: actions/upload-artifact@v4
         with:
-          name: fit2gpx_${{ matrix.os }}
-          path: target/release/fit2gpx*
+          name: fit2gpx_${{ runner.os }}_${{ runner.arch }}
+          path: |
+              target/release/fit2gpx
+              target/release/fit2gpx.exe
